# src2purl

./: .clabot  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  BUILD_TEST_RESULTS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLI_TEST_REPORT.md  CONTRIBUTING.md  Makefile  OPTIMIZATION_COMPLETE.md  README.md  README_OPTIMIZED.md  SUBCOMPONENTS_FEATURE.md  baseline_scan.json  enhanced_baseline_scan.json  enhanced_with_upmex_scan.json  github_test_results.json  pyproject.toml  requirements-dev.txt  requirements.txt  scanoss_test_results.json  spec.md  test_api_conscious.py  test_build.py  test_cli.py  test_ffmpeg.py  test_final.py  test_fixes.py  test_github_individual.py  test_optimized.py  test_scanoss_individual.py  test_subcomponents.py  test_upmex_individual.py  upmex_test_results.json
.github/workflows/: license-check.yml  release.yml  test.yml
docs/: api.md  discovery-methods.md  examples.md  user-guide.md
shpi/: __init__.py
shpi/cli/: main.py
shpi/core/: client.py  config.py  extractor.py  orchestrator.py  scanner.py  scorer.py  swhid.py
src2id/: README.md  __init__.py
src2id/cli/: main.py  validate.py
src2id/core/: orchestrator.py  swhid.py
src2id/integrations/: manifest_parser.py  oslili.py  upmex.py
swhpi/: __init__.py
swhpi/cli/: main.py  validate.py
swhpi/core/: cache.py  client.py  config.py  extractor.py  models.py  orchestrator.py  package_identifier.py  purl.py  scanner.py  scorer.py  subcomponent_detector.py  swhid.py
swhpi/integrations/: oslili.py
swhpi/search/: strategies.py
tests/: __init__.py  conftest.py  test_identification.py  test_integration.py  test_src2purl.py
tests/integration/: test_known_packages.py
tests/unit/: test_client.py  test_config.py  test_datetime_utils.py  test_models.py  test_purl.py  test_scanner.py  test_scorer.py  test_strategies.py  test_swhid.py
tests/validation/: test_swhid_accuracy.py
